# OpportunityHunter

./: .gitignore  LICENSE  README.md  devlog.md  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: require-approval.yml
config/: config.json
data/samples/: chilecompra_sample.jsonl  compranet_sample.jsonl  secop2_sample.jsonl
src/licitaciones/: cli.py
src/licitaciones/app/: use_cases.py
src/licitaciones/domain/: models.py  ports.py  services.py
src/licitaciones/infrastructure/: config_loader.py  notifiers.py  persistence.py  repositories.py  sources.py
src/licitaciones/utils/: io.py
tests/: conftest.py  test_anomaly_and_filters.py
tools/: config_manager.py  persistence_manager.py  report_viewer.py  run_productive.ps1
